Allow About dialog to stretch correctly Fixes #32

--- a/twirch/src/styles.scss
+++ b/twirch/src/styles.scss
@@ -42,6 +42,10 @@ html, body {
   background: rgb(15, 15, 15);
 }
 
+.aboutPanel .mat-mdc-dialog-container .mdc-dialog__container {
+  max-width: 100%;
+}
+
 .aboutPanel .mat-mdc-dialog-container .mdc-dialog__surface {
   padding: 8px;
   background: variables.$background-color;
